--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@babel/core": "^7.20.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
+    "@mui/styles": "^5.11.1",
     "@reach/router": "^1.3.4",
     "@react-pdf-viewer/core": "^3.9.0",
     "@testing-library/jest-dom": "^5.16.5",
