--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cmartin199.github.io/cachel_interiors",
+  "homepage": "https://cmartin199.github.io/cachel_interiors",
   "name": "cashel_interiors",
   "version": "0.1.0",
   "private": true,
