changed private to false

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://cmartin199.github.io/cashel_Interiors/",
   "name": "cashel_interiors",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/core": "^7.20.5",
     "@emotion/react": "^11.10.5",
