--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://cmartin199.github.io/cashel_Interiors/",
   "name": "cashel_interiors",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@babel/core": "^7.20.5",
     "@emotion/react": "^11.10.5",
@@ -34,8 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "yarn build",
-    "deploy": "yarn gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
