--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-pdf": "^5.7.4",
+    "eslint": "^8.34.0",
     "pdfjs-dist": "3.1.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,13 +39,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint:fix": "eslint . --fix"
   },
   "browserslist": {
     "production": [
@@ -59,6 +55,9 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^4.0.0"
   }
 }
